<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Header for Edit Profile -->
    <TextView
        android:id="@+id/edit_profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/periwinkle"
        android:padding="16dp"
        android:text="Edit Profile"
        android:textAlignment="center"
        android:textSize="25sp"

        app:layout_constraintTop_toTopOf="parent"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_header"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Profile Picture Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/profile_image_view"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="Profile Picture"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <Button
                        android:id="@+id/change_profile_picture_button"
                        style="@style/ButtonStyleF"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Edit Profile Picture" />

                    <Button
                        android:id="@+id/generate_profile_picture_button"
                        style="@style/ButtonStyleF"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Generate Picture" />

                    <!-- Button to Delete Profile Picture -->
                    <Button
                        android:id="@+id/delete_profile_picture_button"
                        style="@style/ButtonStyleF"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Delete Picture" />

                </LinearLayout>
            </LinearLayout>

            <!-- Editable Fields Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:paddingBottom="8dp">

                <TextView
                    style="@style/FragmentConstants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name:" />

                <EditText
                    android:id="@+id/edit_user_name"
                    style="@style/FragmentConstants"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="100"
                    android:hint="Enter Name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:paddingBottom="8dp">

                <TextView
                    style="@style/FragmentConstants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email:" />

                <EditText
                    android:id="@+id/edit_user_email"
                    style="@style/FragmentConstants"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="254"
                    android:inputType="textEmailAddress"
                    android:hint="Enter Email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:paddingBottom="8dp">

                <TextView
                    style="@style/FragmentConstants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone:" />

                <EditText
                    android:id="@+id/edit_user_phone"
                    style="@style/FragmentConstants"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="15"
                    android:hint="Enter Phone" />
            </LinearLayout>

            <!--  Facility  -->
            <LinearLayout
                android:id="@+id/display_edit_profile_facility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:paddingBottom="8dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/FragmentConstants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Facility:" />

                    <EditText
                        android:id="@+id/edit_user_facility"
                        style="@style/FragmentConstants"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Enter Facility" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/FragmentConstants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Facility Address:" />

                    <EditText
                        android:id="@+id/edit_user_facility_address"
                        style="@style/FragmentConstants"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Enter Facility Address" />
                </LinearLayout>


            </LinearLayout>

            <!-- Save and Cancel Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="start"
                android:orientation="horizontal"
                android:padding="16dp"
                android:paddingBottom="8dp">

                <!-- Edit Roles Button -->
                <Button
                    android:id="@+id/edit_user_role_button"
                    style="@style/ButtonStyleA"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Edit Roles" />

                <Button
                    android:id="@+id/save_profile_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="Save"
                    android:textColor="@color/marian_blue"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/cancel_profile_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@android:color/transparent"
                    android:text="Cancel"
                    android:textColor="@color/marian_blue"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>