...
    <!--Note: Can change visibilities to "gone", "visible" and "invisible" to deal with roles-->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/edit_profile_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav_view"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_profile_body"
        android:layout_width="match_parent"
        android:layout_height="0sp"
...
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/edit_profile_button"
            style="@style/ButtonStyleA"
            android:text="Edit Profile"
            app:layout_constraintTop_toBottomOf="@id/user_display_info"
            app:layout_constraintBottom_toBottomOf="@id/user_profile_body"
            app:layout_constraintStart_toStartOf="@id/user_display_info"
            app:layout_constraintEnd_toEndOf="@id/user_display_info"
...
