...
            android:padding="10dp"
            android:text="Entrant"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/entrant_switch"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
...
            android:padding="10dp"
            android:text="Organizer"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/organizer_switch"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:padding="10dp" />
    </LinearLayout>

</LinearLayout>
