...
            android:textSize="25sp"
            android:padding="15sp"
            android:gravity="center" />

        <!-- Buttons -->
        <Button
            android:id="@+id/edit_event_page_button"
            style="@style/OrganizerEventDetailsButtons"
            android:text="Edit Event page" />

        <Button
            android:id="@+id/view_entrant_lists_button"
            style="@style/OrganizerEventDetailsButtons"
            android:text="View Entrant Lists" />

        <Button
            android:id="@+id/view_entrant_map_button"
            style="@style/OrganizerEventDetailsButtons"
            android:text="View Entrant Map" />

        <Button
            android:id="@+id/view_event_qr_code_button"
            style="@style/OrganizerEventDetailsButtons"
            android:text="View Event QR Code" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/organizer_event_details_back_button"
...
