<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Header Text -->
    <TextView
        android:id="@+id/adminHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/periwinkle"
        android:gravity="center"
        android:padding="16dp"
        android:text="View Entrants"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/periwinkle"
            style="@style/ArrowLeftButtonStyle" />

        <!-- TabLayout for the admin tabs -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/entrant_list_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/periwinkle" />
    </LinearLayout>

    <!-- ViewPager2 to handle swiping between tabs -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/entrant_list_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>